--- a/rq/static/css/index.css
+++ b/rq/static/css/index.css
@@ -17,20 +17,21 @@ a{
 .header{
 	width: 100%;
 	height: 72px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	z-index: 999;
-	position: relative;
+}
+.h-container{
+	width: 1300px;
+	margin: 0 auto;
 }
 .logo{
-	margin: 18px 0 0 20px;
+	margin: 18px 0 0 20px;	
+	float: left;
 }
 .nav-item{
 	margin: 26px 0 0 10px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
+	float: left;
 }
 .nav-item li{
 	margin: 0 14px;
@@ -49,15 +50,16 @@ a{
 }
 /*搜索区域*/
 .search-area{
-	width: 400px;
-	margin: 18px 0 0 40px;
+	width: 320px;
+	margin: 18px 0 0 20px;
 	height: 40px;
 	background: #E9E9E9;
 	border-radius: 8px;
 	position: relative;
+	float: left;
 }
 .search-input{
-	width: 240px;
+	width: 200px;
 	height: 40px;
 	font-size: 14px;
 	line-height: 24px;
@@ -74,15 +76,42 @@ a{
 }
 /*登录注册区域*/
 .login-area{
-	margin-left: 120px;
+	margin-left: 20px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
+	float: left;
 }
 .login-area li{
 	height: 72px;
 	line-height: 72px;
 	margin: 0 10px;
+}
+.login-area li:first-child{
+	position: relative;
+}
+.login-area li:first-child div{
+	position: absolute;
+	top: 72px;
+	opacity: 0;
+	z-index: 1000;
+	background: #fff;
+	transition: 1s linear;
+}
+.login-area li:first-child:hover div{
+	/* display: block; */
+		width: 80px;
+		height: 80px;
+		opacity: 1;
+}
+.wechat{
+	width: 80px;
+	height: 80px;
+}
+.wechat img{
+	width: 60px;
+	height: 60px;
+	margin: 10px;
 }
 .login-area li a{
 	font-size: 16px;
