--- a/rq/static/css/footer.css
+++ b/rq/static/css/footer.css
@@ -68,3 +68,10 @@
   border-top: 1px solid #fff;
   margin-top: 40px;
 }
+.f-other p{
+  width: 1200px;
+  margin: 0 auto;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+}
