--- a/rq/static/css/goods.css
+++ b/rq/static/css/goods.css
@@ -22,22 +22,15 @@ a{
   width: 1200px;
   margin: 0 auto;
 }
-/* 左边 */
 .nav-item{
-  float: left;
   width: 600px;
-}
-.nav-item::after{
-  content: "";
-  display: block;
-  clear: both;
+  height: 50px;
+  float: left;
 }
 .nav-item li{
   float: left;
   line-height: 50px;
-}
-.nav-item li+li{
-  padding-left: 30px;
+  padding-left: 20px;
 }
 .nav-item li a{
   color:#717A84;
@@ -47,23 +40,179 @@ a{
 .nav-item li a:hover{
   color:#fff;
 }
-/* 右边登录注册区域 */
 .login-area{
-  float: right;
-  width: 400px;
-  margin-left: 200px;
-}
-.login-area::after{
-  content: "";
-  display: block;
-  clear: both;
+  width: 600px;
+  height: 50px;
+  float: left;
+  padding-left: 200px;
 }
 .login-area li{
   float: left;
   line-height: 50px;
+  padding-left: 20px;
+}
+.login-area li a{
   color:#fff;
   font-size: 16px;
 }
-.login-area li+li{
-  padding-left: 30px;
+/* 商品详情 */
+.goods{
+  width: 1200px;
+  margin: 0 auto;
+  background: #e8e8e8;
+}
+.goods-classify{
+  height: 50px;
+  line-height: 50px;
+  padding-left: 20px;
+  color: #1c1f21;
+  font-size: 16px;
+}
+/* 商品图片和信息 */
+.goods-directions{
+  width: 100%;
+  height: 400px;
+  display: flex;
+}
+.goods-img{
+  flex: 1;
+  text-align: center;
+}
+.goods-img img{
+  width: 400px;
+}
+.information{
+  flex: 1;
+  padding-right: 60px;
+}
+.title{
+  font-weight: bold;
+  font-size: 16px;
+}
+.title2{
+  color: red;
+  margin-top: 10px;
+  font-weight: lighter;
+}
+.price{
+  color:#FF0036;
+  margin-top: 30px;
+  font-size: 30px;
+}
+.express{
+  margin-top: 30px;
+}
+.sales{
+  height: 30px;
+  margin-top: 60px;
+  display: flex;
+  border: 1px dotted #c9c9c9;
+}
+.sales li {
+  flex: 1;
+  line-height: 30px;
+  text-align: center;
+  color: #999;
+}
+.sales li+li{
+  border-left: 1px solid #1c1f21;
+}
+.sales li a{
+  color: #147bbf;
+}
+.goods-btn{
+  margin-top: 64px;
+}
+.goods-btn a{
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 16px;
+}
+.add-cart{
+  margin-right: 0;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  width: 178px;
+  border: 1px solid #147bbf;
+  color: #147bbf;
+}
+.buy{
+  margin-left: 20px;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  width: 178px;
+  color: #fff;
+  background-color: #147bbf;
+}
+/* tab选项卡 */
+.tab {
+  width: 1200px;
+  height: 50px;
+  margin-top: 30px;
+}
+.tab li{
+  float: left;
+  width: 100px;
+  height: 50px;
+  margin-left: 120px;
+  text-align: center;
+}
+/* 选中状态 */
+.tab li.active{
+  border-bottom: 2px solid #147bbf;
+}
+.tab li.active a{
+  color: #147bbf;
+}
+.tab li a{
+  color: #333;
+  line-height: 50px;
+  font-size: 16px;
+}
+/* 选项卡对应面板 */
+.container{
+  width: 900px;
+  float: left;
+}
+/* 解决高度坍塌 */
+.goods::after{
+  content:"";
+  display: block;
+  clear: both;
+}
+.container div{
+  display: none;
+  width: 900px;
+  height: 800px;
+}
+#details{
+  display: block;
+}
+/* 侧边栏 */
+.side{
+  float: left;
+  width: 300px;
+  height: 800px;
+  background: #fff;
+  padding-top: 20px;
+}
+.s-wechat{
+  height: 300px;
+  text-align: center;
+  background: #717A84;
+  padding: 50px 0;
+}
+.recommend{
+  height: 400px;
+  margin-top: 20px;
+  background: #717A84;
+  padding: 20px;
+}
+.recommend p{
+  height: 40px;
+  line-height: 40px;
+  border-bottom: 1px solid #333;
 }
