--- a/rq/static/css/goods.css
+++ b/rq/static/css/goods.css
@@ -8,6 +8,7 @@ html, body {
     font: 14px/1.5 "PingFang SC", "微软雅黑", "Microsoft YaHei", Helvetica, "Helvetica Neue", Tahoma, Arial, sans-serif;
     color: #1c1f21;
     height: 100%;
+    background-color: #f6f5fa;
 }
 a{
   text-decoration: none;
@@ -59,7 +60,6 @@ a{
 .goods{
   width: 1200px;
   margin: 0 auto;
-  background: #e8e8e8;
 }
 .goods-classify{
   height: 50px;
@@ -70,9 +70,11 @@ a{
 }
 /* 商品图片和信息 */
 .goods-directions{
+  background: #fff;
   width: 100%;
-  height: 400px;
+  height: 460px;
   display: flex;
+  padding: 30px 0;
 }
 .goods-img{
   flex: 1;
@@ -151,7 +153,7 @@ a{
 .tab {
   width: 1200px;
   height: 50px;
-  margin-top: 30px;
+  background-color: #f6f5fa;
 }
 .tab li{
   float: left;
@@ -174,7 +176,7 @@ a{
 }
 /* 选项卡对应面板 */
 .container{
-  width: 900px;
+  width: 880px;
   float: left;
 }
 /* 解决高度坍塌 */
@@ -185,8 +187,9 @@ a{
 }
 .container div{
   display: none;
-  width: 900px;
+  width: 880px;
   height: 800px;
+  background-color: #fff;
 }
 #details{
   display: block;
@@ -196,19 +199,20 @@ a{
   float: left;
   width: 300px;
   height: 800px;
-  background: #fff;
+  background: #f6f5fa;
   padding-top: 20px;
+  margin-left: 20px;
 }
 .s-wechat{
   height: 300px;
   text-align: center;
-  background: #717A84;
+  background: #fff;
   padding: 50px 0;
 }
 .recommend{
   height: 400px;
   margin-top: 20px;
-  background: #717A84;
+  background: #fff;
   padding: 20px;
 }
 .recommend p{
