--- a/rq/static/css/main.css
+++ b/rq/static/css/main.css
@@ -1,158 +1,201 @@
-.main{
-	position: relative;
-	background: #e8e8e8;
-	padding-bottom: 50px;
+/* 底部和登录注册面板样式 */
+.f-container{
+  width: 1200px;
+  margin: 20px auto;
+  padding: 50px 0;
 }
-.bk{
+.service{
+  width: 300px;
+  float: left;
+}
+.f-container::after{
+  content: "";
+  display: block;
+  clear: both;
+}
+.service li{
+  float: left;
+  padding-left: 50px;
+}
+.service li div:first-child{
+  float: left;
+  font-size: 36px;
+  width: 50px;
+  color:#0f77be;
+}
+.service li div:last-child{
+  float: left;
+  width: 200px;
+}
+.service li div p{
+  text-align: left;
+}
+.service li div p:first-child{
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+}
+.service li div p:last-child{
+  font-size: 16px;
+  color: #888;
+}
+/* other页脚 */
+.f-other{
+  width: 100%;
+  height: 200px;
+  background: #333;
+}
+.f-other ul{
+  margin: 0 auto;
+  padding-top: 50px;
+  width: 1200px;
+}
+.f-other ul::after{
+  content: "";
+  display: block;
+  clear: both;
+}
+.f-other ul li{
+  float: left;
+  color: #fff;
+  padding-left: 100px;
+}
+.f-other ul li:first-child{
+  padding-left: 0;
+}
+.f-slide{
+  width: 1200px;
+  margin: 0 auto;
+  border-top: 1px solid #fff;
+  margin-top: 40px;
+}
+.f-other p{
+  width: 1200px;
+  margin: 0 auto;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+}
+
+
+/*蒙版效果*/
+.login-background, .reg-background{
 	width: 100%;
-	height: 100px;
-	background-image: linear-gradient(to bottom, rgb(35, 106, 173), rgb(255,255,255));
-	filter: 100px;
-	opacity: 0.3;
+	height: 100%;
+	z-index: 999;
+	background-size: cover;
+	background: #000;
+	position: fixed;
+	opacity: 0.75;
+	top: 0;
+	left: 0;
 }
-.mybox{
-	height: 330px;
-}
-.mb-container{
-  width: 1152px;
-	height: 382px;
-  margin-bottom: 100px;
-  background-color: #93999f;
-  box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
-	position: absolute;
-  overflow: hidden;
-	top: 30px;
+/*登录注册面板*/
+.login-modal, .reg-modal{
+	width: 384px;
+	height: 364px;
+	z-index: 10000;
+	position: fixed;
+	top: 50%;
 	left: 50%;
-	margin-left: -576px;
-  border-radius: 8px;
+	background: #fff;
+	margin-top: -182px;
+	margin-left: -192px;
+	border-radius: 12px;
+	box-shadow: 0 12px 24px 0 rgba(28,31,33,.1);
+	padding: 10px 0 20px 0;
 }
-.menu-content{
-	width: 216px;
-	float: left;
+.login-modal-header, .reg-modal-header{
 	position: relative;
-	background: #2b333b;
-	padding-top: 17px;
-	padding-bottom: 15px;
+	padding: 0 40px 20px;
 }
-.menu-item{
+.login-modal-header>span, .reg-modal-header>span{
+  font-size: 16px;
+  line-height: 49px;
+  font-weight: 700;
+  height: 49px;
+  color: #0f77be;
+}
+.login-modal-header i, .reg-modal-header i{
+	position: absolute;
+	top: 10px;
+	right: 20px;
+}
+.login-modal-body, .reg-modal-body{
 	position: relative;
-	height: 50px;
-	line-height: 50px;
-	font-size: 16px;
-	cursor: pointer;
-	color: #999;
 	padding: 0 30px;
 }
-.menu-item:hover{
-	background: rgba(7,17,27,0.3);
+.login-user,.login-upwd{
+	width: 320px;
+	height: 68px;
 }
-.menu-item a{
-	color: #e8e8e8;
-	line-height: 50px;
+.reg-user, .reg-upwd, .reg-cpwd{
+	width: 320px;
+	height: 68px;	
 }
-.menu-details{
-	width: 800px;
-	height: 382px;
-	background: #fff;
-	float: left;
-	display: none;
-	position: relative;
-	border-top-right-radius: 8px;
-	border-bottom-right-radius: 8px;
-}
-.menu-details:hover{
-	cursor: pointer;
-}
-/* 菜单详情样式 */
-.md-title{
-	position: absolute;
-	top: 20px;
-	left: 40px;
-	background: #fff;
-	width: 100px;
-	height: 50px;
-	border: 1px solid #e8e8e8;
-	border-radius: 8px;
-}
-.md-title p{
-	color: #2b333b;
-	line-height: 50px;
-	text-align: center;
-}
-.menu-details ul{
-	position: absolute;
-	top: 100px;
-	left: 40px;
-}
-.menu-details ul li{
-	float: left;
-	margin-right: 20px;
-}
-.slide{
-	border-bottom: 2px solid #e8e8e8;
+.login-user input,.login-upwd input, .reg-user input, .reg-upwd input, .reg-cpwd input{
+	height: 48px;
 	width: 100%;
-	position: absolute;
-	top: 190px;
-}
-/* 轮播图 */
-.banner-content{
-	float: left;
-	width: 936px;
-	height: 382px;
-}
-/* top单品 */
-.product-box{
-	width: 1200px;
-	margin: 20px auto;
-}
-.p-title{
-	height: 24px;
+	font-size: 14px;
 	line-height: 24px;
-	font-size: 20px;
-	color: #0f77be;
-	margin-bottom: 20px;
-}
-.p-title i{
-	font-size: 24px;
-}
-.p-title a{
-	font-size: 16px;
-	text-align: right;
-	float: right;
-}
-.p-item-box{
-	height: 250px;
-}
-.p-item{
-	width: 200px;
-	height: 250px;
-	background: #fff;
+	border: none;
+	outline: none;
+	padding: 8px 12px;
+	background: rgba(28,31,33,.06);
 	border-radius: 8px;
-	float: left;
 }
-.p-item+.p-item{
-	margin-left: 50px;
+.login-options{
+	width: 100%;
+	height: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: #9199a1;
 }
-.p-item img{
-	width: 200px;
-	height: 200px;
-	border-top-left-radius: 8px;
-	border-top-right-radius: 8px;
+.login-options a{
+	color: #9199a1;
 }
-/* 产品名称和价格 */
-.pname{
+.login-button button, .reg-button button{
+	width: 100%;
+	height: 48px;
+	margin: 10px 0;
+	border-radius: 24px;
+	background: #0f77be;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+}
+.login-modal-footer{
+	width: 100%;
+	height: 48px;
+	padding: 0 30px;
+}
+.login-method{
+	display: flex;
+	justify-content: space-around;
+}
+.login-method-phone{
+	text-align: left;
+	line-height: 24px;
+	flex: 1;
+}
+.login-method-phone a{
+	color: #f20d0d;
+}
+.login-method-other{
+	flex: 1;
 	text-align: center;
-	color: #333;
+	margin-top: -2px;
+	display: flex;
+	justify-content: space-around;
 }
-.price{
-	font-size: 12px;
-	color: #4f8dfe;
-	float: left;
-	margin: 5px 10px;
+.login-method-other i{
+	font-size: 24px;
+	color: #b5b9bc;
 }
-.count{
+.login-warning{
+	text-align: center;
 	font-size: 12px;
-	color: #888;
-	float: left;
-	margin: 5px 0px 0px 60px;
+	color: #717a84;
 }
